# fomc-nlp-intraday-crypto

./: README.md  config.yaml  demo.ipynb  main.py  pyproject.toml  requirements.txt
data/_cache/fomc_data/20130320/: statement.html
data/_cache/fomc_data/20130619/: statement.html
data/_cache/fomc_data/20130918/: statement.html
data/_cache/fomc_data/20131218/: statement.html
data/_cache/fomc_data/20140319/: statement.html
data/_cache/fomc_data/20140618/: statement.html
data/_cache/fomc_data/20140917/: statement.html
data/_cache/fomc_data/20141217/: statement.html
data/_cache/fomc_data/20150318/: statement.html
data/_cache/full_sentiment/: full_sentiment_cache.csv
data/_cache/market_data/: BTCUSDT_1m.parquet  ETHUSDT_1m.parquet
data/_cache/raw_sentiment/: raw_sentiment_cache copy.csv
data/market_data/: BTCUSDT_1m.parquet
scripts/: plot_sentiment.py
src/: orchestrator.py  utilities.py
src/fomc_hf_nlp/: __init__.py  __version__.py
src/fomc_hf_nlp/ingestor/: __init__.py  abstract_ingestor.py  fomc_data.py  statement_ingestor.py
src/fomc_hf_nlp/market/: __init___.py  market_loader.py  market_processor.py
src/fomc_hf_nlp/models/: __init__.py  fomc_meeting.py  transcript.py
src/fomc_hf_nlp/quant_analysis/: plots.py
src/fomc_hf_nlp/sentiment/: __init__.py  nlp_pipeline.py  sentiment_scorer.py
src/fomc_hf_nlp/tools/: __init__.py  chunker.py  utilities.py
src/ingestor/: abstract_ingestor.py  fomc_data.py  pressconf_ingestor.py
src/market/: market_loader.py  market_processor.py
src/models/: fomc_event.py
src/quant_analysis/: analysis.py  data_prep.py  plots.py  stats.py  visualization.py
src/sentiment/: nlp_pipeline.py  sentiment_scorer.py
src/tools/: __init__.py  logging_config.py
(+163 files in other folders)
