[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fomc-hf-nlp"
version = "0.1.0"
description = "A Statistical Study of High Frequency Crypto Reactions to FOMC NLP Tone"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Thibault Charbonnier", email = "thibault.charbonnier@ensae.fr" }]
keywords = ["FOMC", "NLP", "RoBERTa", "event study", "crypto", "high-frequency", "quant", "statistics", "econometrics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "pdfminer.six>=20231228",
  "tqdm>=4.66",
  "rich>=13.7",
  "regex>=2023.12",
  "transformers>=4.44",
  "huggingface-hub>=0.23",
  "accelerate>=0.33",
  "torch>=2.2",
  "tokenizers>=0.15",
]

[project.optional-dependencies]
plots = ["seaborn>=0.13"]
io = ["pyarrow>=14.0"]
dev = ["pytest>=8", "ruff>=0.6", "black>=24.4", "build", "twine"]

[project.urls]
Homepage = "https://github.com/thibault-charbonnier/fomc-nlp-intraday-crypto"
Issues = "https://github.com/thibault-charbonnier/fomc-nlp-intraday-crypto/issues"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fomc_hf_nlp*"]